knote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knote-ops
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      run: knote
  template:
    metadata:
      labels:
        run: knote
    spec:
      containers:
      - name: knote-container
        image: 567232876231.dkr.ecr.ap-northeast-3.amazonaws.com/knote-ops:0.1.2 # {"$imagepolicy": "flux-system:knote-ops"}
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 400m
          requests:
            cpu: 300m
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: run
                  operator: In
                  values:
                  - knote
              topologyKey: "kubernetes.io/hostname"
