knote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knote
  namespace: default
spec:
  selector:
    run: knote
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
